syntax = "proto3";

package top.fengye.rpc.grpc;
import "bizParam.proto";

service Raft {
  rpc queryStatus (Empty) returns (queryStatusResponse);
  rpc shutDown(Empty) returns (shutDownResponse);
  rpc applyVote (ApplyVoteRequest) returns (ApplyVoteResponse);
  rpc appendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc handleRequest (CommandRequest) returns (CommandResponse);
}

message Empty{
}
message queryStatusResponse{
  string nodeId = 1;
  string roleInfo = 2;
  string entriesInfo = 3;
}
message shutDownResponse{
  string nodeId = 1;
  string message = 2;
}


message ApplyVoteRequest{
  string nodeId = 1;
  int32 term = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm = 4;
}
message ApplyVoteResponse {
  string nodeId = 1;
  int32 term = 2;
  bool agreed = 3;
}


message AppendEntriesRequest {
  string nodeId = 1;
  int32 term = 2;
  int32 preLogIndex = 3;
  int32 preLogTerm = 4;
  int32 leaderCommit = 5;
  repeated LogEntry entries = 6;
}
message AppendEntriesResponse {
  string nodeId = 1;
  int32 term = 2;
  bool success = 3;
}


message CommandRequest {
  Command command = 1;
}
message CommandResponse {
  bool redirect = 1;
  string redirectHost = 2;
  int32 redirectPort = 3;
  bool success = 4;
  string result = 5;
}